Correct routing bug in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,12 @@
  location        /{
-    proxy_pass      http://localhost:4200;
+         proxy_pass      http://localhost:4200;
 
-   }
-   location /schedule/ {
-       proxy_pass      http://localhost:8080;
-        rewrite /schedule/(.*) /$1  break;
-    }
-    location /show-details/ {
-            proxy_pass      http://localhost:4201;
-    }
+         }
+         location /schedule/ {
+         proxy_pass      http://localhost:8080;
+         rewrite /schedule/(.*) /$1  break;
+         }
+         location /show-details-app/ {
+                 proxy_pass      http://localhost:4201;
+                 rewrite /show-details/(.*) /$1 break;
+         }
