--- a/micro-apps/show-details-angular/package.json
+++ b/micro-apps/show-details-angular/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4201 --base-href show-details",
+    "start": "ng serve --port 4201 --base-href /show-details-app/",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
