--- a/shell-application/package.json
+++ b/shell-application/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start:shell-app": "ng serve",
+    "start:schedule-app": "cd ../micro-apps/show-schedule && npm start",
+    "start:show-details": "cd ../micro-apps/show-details-angular && npm start",
+    "start": "npm-run-all --parallel start:show-details start:schedule-app start:shell-app",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,10 +33,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.0.0",
     "@angular-devkit/build-angular": "~0.10.2",
-    "typescript": "~3.1.3",
     "@angular/cli": "~7.0.2",
+    "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -46,8 +48,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.3.1",
+    "npm-run-all": "^4.1.3",
     "protractor": "~5.4.1",
     "ts-node": "~7.0.1",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.3"
   }
 }
